last_update : fix stretched logo issue and remove log.

--- a/sites/all/modules/memory_blocks/css/memory_menu.css
+++ b/sites/all/modules/memory_blocks/css/memory_menu.css
@@ -18,10 +18,11 @@ a#logo {
   width: auto;
   height: 100%;
   margin: 0 50px 0 0 !important;
+  box-sizing: border-box !important;
 }
 #logo > img {
-  height: 100% !important;
-  width: auto !important;
+  height: 80px;
+  /*width: auto !important;*/
 }
 #menu-bar-wrapper {
   position: relative;
